# dist/openapi.yaml
@@ -128,6 +128,29 @@ paths:
           description: user is not authorized
       security:
         - cookieAuth: []
+  /users/favorites/{id}:
+    delete:
+      tags:
+        - Users
+      summary: delete recipe from the favorites list of a user
+      description: delete recipe from the favorites list of a user
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the recipe
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            example: "716429"
+      responses:
+        "200":
+          description: The Recipe successfully saved as favorite
+        "401":
+          description: user is not authorized
+      security:
+        - cookieAuth: []
   /users/watchedrecipes:
     get:
       tags:
