# routes/user.js
@@ -3,11 +3,12 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const user_utils = require("./utils/user_utils");
 const recipe_utils = require("./utils/recipes_utils");
-
+console.log("Im in users");
 /**
  * Authenticate all incoming requests by middleware
  */
 router.use(async function (req, res, next) {
+  console.log("Im in router users");
   if (req.session && req.session.user_id) {
     DButils.execQuery("SELECT user_id FROM users").then((users) => {
       if (users.find((x) => x.user_id === req.session.user_id)) {
@@ -26,8 +27,13 @@ router.use(async function (req, res, next) {
  */
 router.post('/favorites', async (req, res, next) => {
   try {
+    console.log("post favorites");
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
+
+    console.log("user_id " + user_id);
+    console.log("recipe_id " + recipe_id);
+
     await user_utils.markAsFavorite(user_id, recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
   } catch (error) {
@@ -40,12 +46,36 @@ router.post('/favorites', async (req, res, next) => {
  */
 router.get('/favorites', async (req, res, next) => {
   try {
+    console.log("get favorites");
+    
     const user_id = req.session.user_id;
     const recipes_id = await user_utils.getFavoriteRecipes(user_id);
+    
+    console.log("user_id " + user_id);
+    
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
     const results = await recipe_utils.getRecipesPreview(user_id, recipes_id_array);
     res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path delete favorites recipes that were saved by the logged-in user
+ */
+router.delete('/favorites/:recipeId', async (req, res, next) => {
+  try {
+    console.log("delete favorites");
+    const user_id = req.session.user_id;
+    const recipe_id = req.params.recipeId;
+
+    console.log("user_id " + user_id);
+    console.log("recipe_id " + recipe_id);
+    await user_utils.removeFavorite(user_id, recipe_id);
+    res.status(200).send("The Recipe successfully removed from favorites");
   } catch (error) {
     next(error);
   }
